# -Smart-Stadiums-Tournament-Operations

./: .env.example  .gitignore  MANUAL_DEPLOY.md  ORIGINAL_REQUEST.md  PROJECT.md  README.md  TEST_INFRA.md  docker-compose.yml  progress.md  render.yaml
.agents/: BRIEFING.md  ORIGINAL_REQUEST.md  handoff.md
.agents/accessibility_auditor/: BRIEFING.md  ORIGINAL_REQUEST.md  accessibility_audit_report.md  handoff.md  progress.md
.agents/auditor_m1/: BRIEFING.md  ORIGINAL_REQUEST.md  handoff.md  progress.md
.agents/auditor_m2/: BRIEFING.md  ORIGINAL_REQUEST.md  audit.md  handoff.md  (+1 more)
backend/: Dockerfile  pyproject.toml
backend/app/: __init__.py  main.py
backend/app/agent/: __init__.py  loop.py  prompt.py
backend/app/api/: auth.py  routes.py
backend/app/core/: __init__.py  config.py  gemini.py  llm.py  ollama_client.py
backend/app/knowledge/: __init__.py  docs.py  store.py
backend/app/models/: __init__.py  chat.py  roles.py  stadium.py  state.py
backend/app/simulator/: __init__.py  engine.py  fixtures.py
backend/app/tools/: __init__.py  handlers.py  registry.py
backend/tests/: conftest.py  test_adversarial_security.py  test_agent_loop.py  test_api.py  test_challenger_m2.py  test_challenger_m7.py  test_e2e_suite.py  test_integration.py  test_production.py  test_route_cache_challenger.py  test_route_cache_lru.py  test_scenarios.py  test_security_hardening.py  test_simulator.py  test_stress.py  test_tools.py  test_wayfinding_challenger.py
frontend/: Dockerfile  index.html  package-lock.json  package.json  tsconfig.tsbuildinfo  vite.config.ts
(+376 files in other folders)
